<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title" />

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description" />

        <DatePicker
            android:id="@+id/task_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TimePicker
            android:id="@+id/task_due_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />


        <CheckBox
            android:id="@+id/task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_status" />

        <CheckBox
            android:id="@+id/task_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_notification" />

        <EditText
            android:id="@+id/task_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_category" />

        <Button
            android:id="@+id/add_attachment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_attachment" />

        <Button
            android:id="@+id/save_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_task" />

    </LinearLayout>
</ScrollView>
